correção de alguns bugs

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,40 +1,63 @@
 * {
   box-sizing: border-box;
   font-weight: 500;
+  margin: 0;
+  padding: 0;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-body {
-  margin: 0;
-  padding: 10px;
+body {  
   background: #f7f7f7;
   font-size: 16px;
 }
+
 .title {
   font-size: large;
   font-weight: 700;
+  top: 3px;
+  padding: 4px;
 }
 
 .content-head {
+  
   display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
-  padding: 8px;
-  height: auto; 
+  gap: 3rem;
+  border: none;
+  margin-bottom: 8px;
+  height: auto;         
 }
 
 .date {
-  margin-top: 0rem;
-  width: 100%;
-  padding: 8px;
-  font-size: 16px;
+  width: 35%;          
+  padding: 10px;
+  font-size: 16px;      
+  border-radius: 6px;
   border: none;
+  outline: none;
 }
+
+.date:focus {
+  outline: none;
+  box-shadow: none;
+}
+
+.date {
+  -webkit-tap-highlight-color: transparent;
+}
+
 .fornecedor {
   background: #f1efef;
   padding: 10px;
   border-radius: 10px;
   margin-bottom: 20px;
+}
+
+.id-fornecedor {
+    text-align: center;
+    background-color: #cb4c59;
+    padding: 4px;
+    color: white;
+    border-radius: 4px;
 }
 table {
   width: 100%;
@@ -49,30 +72,55 @@ table {
 th,
 td {
   padding: 10px 6px;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid #f6f4f4;
   text-align: center;
   font-size: 15px;
 }
 
+td:first-child,
+th:first-child {
+  text-align: left;
+  min-width: 120px;
+}
+
 th {
-  background: #eee;
+  background: #434141;
   position: sticky;
-  top: 0;
+  border: 1px solid;
+  color: #f6f1f1;
+  padding: 10px;
+  top: 4px;
   z-index: 2;
 }
+
 input[type="number"] {
   width: 3.5rem;
-  padding: 6px;
+  padding: 4px;
   font-size: 16px;
   border-radius: 6px;
   border: 1px solid #ccc;
 }
 
-
 .qtd-input,
 .qtd-input2 {
   appearance: none;
   -moz-appearance: textfield;
+  outline: none;
+}
+
+.qtd-input:focus {
+  outline: none;
+  box-shadow: none;
+}
+
+.qtd-input2:focus {
+  outline: none;
+  box-shadow: none;
+}
+
+.qtd-input,
+.qtd-input2 {
+  -webkit-tap-highlight-color: transparent;
 }
 
 .qtd-input::-webkit-inner-spin-button,
@@ -82,13 +130,19 @@ input[type="number"] {
   -webkit-appearance: none;
   margin: 0;
 }
+
 input[type="checkbox"] {
   transform: scale(1.5);
   cursor: pointer;
 }
 
 tr.recebido {
-  background-color: #8bf08b;
+  background-color: #52f07a;
+}
+
+.input-ok {
+  background-color: #52f07a;
+  border: 1px solid #28a745; 
 }
 
 .status {
@@ -105,9 +159,10 @@ tr.recebido {
 }
 
 .status.ok {
-  background: #d4edda;
+  background:  #52f07a;
   color: #04b631;
 }
+
 
 @media (min-width: 768px) {
   body {
@@ -128,20 +183,7 @@ tr.recebido {
   td {
     font-size: 14px;
   }
-} 
-
-@media (max-width: 767px) {
-  table {
-    font-size: 14px;
-  }
-
-  td:first-child,
-  th:first-child {
-    text-align: left;
-    min-width: 120px;
-  }
 }
-
 
 @media (min-width: 1024px) {
   .fornecedor {
